# taskboard

./: .gitignore  README.md  pyproject.toml  requirements.txt  wezterm.lua
.dev-flow/: 01-requirements.md  02-review.md  04-validation.md  05-postmortem.md  PLAN.md  state.json
.dev-flow/03-increments/: increment-001.md  increment-002.md  increment-003.md
.dev-flow/06-docs/: executive-summary.md  functionality.md  traceability-matrix.md
.dev-flow/06-docs/diagrams/: architecture.md  data-model.md  sequence-open-image.md
.fast-dev-flow/: spec.md
.fast-dev-flow/archive/: 20260723-220159-spec.md
taskboard/: __init__.py  __main__.py  app.py  modals.py  models.py  ribbon.py  taskboard.tcss  views.py
tests/: test_app.py
